# IcePanelC4-Adapter

./: .gitignore  .gitlab-ci.yml  README.md  generate_api.py  generate_api_setup.py
.gitlab/issue_templates/: planning.md  review.md
docs/: API.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
scripts/: get-version.sh
specific-provisioner/: .pre-commit-config.yaml  Dockerfile  interface-specification.yml  mypy.ini  pyproject.toml  server_start.sh
specific-provisioner/docs/: docker.md  opentelemetry.md
specific-provisioner/src/: app_config.py  check_return_type.py  dependencies.py  main.py  models.py
specific-provisioner/src/models/: api_models.py  constants.py  data_product_descriptor.py  icepanel.py
specific-provisioner/src/utility/: logger.py  parsing_pydantic_models.py
specific-provisioner/tests/: test_app.py  test_data_product_descriptor.py  test_dependencies.py  test_main.py  test_parse_yaml_with_model.py
