[tool.poetry]
name = "specific-provisioner"
version = "0.1.0"
description = ""
authors = ["claudio.piva <claudio.piva@agilelab.it>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
black = "^23.1.0"
mypy = "^1.1.1"
fastapi-code-generator = "^0.4.1"
fastapi = {extras = ["all"], version = "^0.90.1"}
pre-commit = "^3.1.1"
ruff = "^0.0.255"
opentelemetry-distro = "^0.37b0"
opentelemetry-instrumentation-fastapi = "0.37b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.16.0"
opentelemetry-exporter-otlp = "^1.16.0"
httpx = "0.23.0"

[tool.ruff]
select = ["E", "F", "I"]

[tool.black]
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
